--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,10 @@ torch = "^2.5.1"
 torchvision = "^0.20.1"
 torchaudio = "^2.5.1"
 ipython = "^8.31.0"
+huggingface-hub = "^0.27.1"
+transformers = "^4.48.1"
+accelerate = "^1.3.0"
+sentencepiece = "^0.2.0"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.1.1"
