--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ huggingface-hub = "^0.27.1"
 transformers = "^4.48.1"
 accelerate = "^1.3.0"
 sentencepiece = "^0.2.0"
+ipympl = "^0.9.6"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.1.1"
