--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ transformers = "^4.48.1"
 accelerate = "^1.3.0"
 sentencepiece = "^0.2.0"
 ipympl = "^0.9.6"
+einops = "^0.8.0"
+evosax = "^0.1.6"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.1.1"
