--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-numpy==2.2.2
-jax==0.5.0
-scikit-learn==1.6.1
+numpy
 matplotlib==3.10.0
 seaborn==0.13.2
 torch==2.5.1
@@ -13,7 +11,4 @@ sentencepiece==0.2.0
 ipympl==0.9.6
 evotorch
 jupyter==1.1.1
-evosax==0.1.4
 git+https://github.com/huggingface/transformers@v4.49.0-Gemma-3
-jax[cuda12]
-jax[tpu]
